--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node js exercise by kabir",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kabir",
